@@ -25,6 +25,7 @@ Changes in 4.2:
 - Remove multiple views support (281675)
 - Relabel Change Tracker button into Switch Tracker to avoid user confusion (282951)
 - Revamp IP filter widget (281245)
+- Fix scanfolder moving to loaded directory causing a flurry of popups about the torrent already being loaded (283508)
 
 Changes in 4.1.3:
 - Fix statusbar hiding and showing not working (281674)
